Fixed scrollbar layout shift

--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -28,6 +28,7 @@ body {
 html,
 body {
   height: 100%;
+  scrollbar-gutter: stable;
   /* min-heigh: 100vh */
 }
 img,
